--- a/main_app/templates/main_app/trail_form.html
+++ b/main_app/templates/main_app/trail_form.html
@@ -8,7 +8,7 @@
 <h1>Add trails
 {% endif %}
     <!-- Leaving the action empty makes the form post to the same url used to display it -->
-    <form action="" method="POST">
+    <form action="" method="POST" enctype="multipart/form-data">
         <!-- Django requires the following for security purposes -->
         {% csrf_token %}
         <table>
