maps not working

--- a/main_app/templates/trails/detail.html
+++ b/main_app/templates/trails/detail.html
@@ -9,6 +9,14 @@
             <img src="{{ trail.image }}">
             <p>Difficulty: {{ trail.difficulty }}</p>
             <p>Description: {{ trail.description|linebreaks }}</p>
+            <br>
+            <p>Street Address: {{trail.streetAddress}}</p>
+            <p>City: {{trail.city}}</p>
+            <p>State: {{trail.state}}</p>
+            <p>zip: {{trail.zip}}</p>
+            <iframe src="http://maps.google.com/?q={{streetAddress}},{{city}}, {{state}}, {{zip}}"></iframe>
+
+
         </div>
         <div class="card-action">
             <a href="{% url 'trails_update' trail.id %}">Edit</a>
