--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <h1>Home</h1>
-
-    <p>
+<main class="container">
+  
+    <p class="homepage-paragraph">
         Looking for a great hike? American Hiking Trails is here for you!
         This is a community run website where you can create and share some
         of your favorite hiking trails. Navigate to 'Explore Trails' to see
         some fantastic hikes in our great nation!
     </p>
+  </main>
 
 {% endblock %}
