--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,14 +1,211 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }
-  
-  main {
-    flex: 1 0 auto;
-  }
-  
-  footer.page-footer {
-    padding-top: 0;
-    text-align: right;
-  }
+  font-family: Arial, sans-serif;
+  background-image: url("trail.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgb(0, 128, 49);
+  color: #fff;
+  padding: 10px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  text-decoration-color: #333;
+}
+
+a {
+  color: teal;
+  text-decoration: none;
+}
+
+main.container {
+  margin: 50px 20px 20px 20px;;
+  font-size: 16px;
+  color: black;
+  line-height: 1.5;
+  background-color: rgba(247, 250, 248, 0.59); 
+  padding: 20px 20px 20px 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 5px;
+  text-align: center;
+}
+
+form {
+  font-family: Arial, sans-serif;
+}
+
+form label {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+form input[type="text"] {
+  font-size: 16px;
+  background-color: transparent;
+}
+
+form textarea {
+  font-size: 16px;
+  background-color: transparent;
+}
+
+form input[type="number"] {
+  font-size: 16px;
+  background-color: transparent;
+}
+
+
+
+
+.btn {
+  font: bolder;
+  background-color: rgb(115, 189, 209);
+  font-size: 16px;
+  color: black;
+  border: 10px;
+  border-color: grey;
+  padding: 10px 20px;
+  border-radius: 4px;
+  margin: auto;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  color: rgb(16, 24, 2);
+  background-color: rgb(51, 164, 104);
+}
+
+.card-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.card {
+  display: inline-block;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+}
+
+.card-content {
+  padding: 10px;
+  text-align: center;
+}
+
+.card-image {
+  width: 100%;
+  height: auto;
+  border-radius: 10px 10px 0 0;
+}
+
+.card-title {
+  margin-top: 10px;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+
+.card-action {
+  padding: 10px;
+  text-align: right;
+}
+
+.card-action a {
+  margin-left: 10px;
+  color: #4CAF50;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.card-action a:hover {
+  color: #45A049;
+}
+
+.homepage-paragraph {
+  font-size: 32px;
+  font-weight: bolder;
+  color: black;
+  line-height: 1.5;
+  background-color: whitesmoke;
+  opacity: 0.6;
+  margin-bottom: auto;
+  padding: 10px;
+}
+
+h1, h2, h3, h4 {
+  color: #333;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 16px;
+}
+
+h3 {
+  font-size: 20px;
+  margin-bottom: 12px;
+}
+
+h4 {
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
+.teal-text {
+  color: teal;
+}
