--- a/main_app/templates/main_app/trail_confirm_delete.html
+++ b/main_app/templates/main_app/trail_confirm_delete.html
@@ -8,6 +8,6 @@
   <form action="" method="POST">
     {% csrf_token %}
     <input type="submit" value="Yes - Delete!" class="btn">
-    <a href="{% url 'detail' trail.id %}">Cancel</a>
+    <a href="{% url 'detail' trail.id %}" input type="submit" value="Cancel" class="btn">Cancel</a>
   </form>
 {% endblock %}
