--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -61,20 +61,29 @@ main.container {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+main {
+  flex-grow: 1;
+  padding: 20px;
+}
+
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
+  right: 0;
   left: 0;
   width: 100%;
   background-color: #4CAF50;
   color: #fff;
   padding: 5px;
   text-align: center;
+  flex-shrink: 0;
 }
 
 form {
   font-family: Arial, sans-serif;
+  margin: 10px;
 }
+
 
 form label {
   font-weight: bold;
