--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,14 +20,14 @@
           </ul>
       </nav>
   </header>
-  <main class="container mt-5">
+  <main class="container">
       {% block content %}
       {% endblock %}
   </main>
-  <footer class="bg-dark text-light text-center py-3">
+ 
       <div class="footer">
           &copy; 2023 American Hiking Trails. All Rights Reserved.
       </div>
-  </footer>
+
 </body>
 </html>
