--- a/main_app/templates/main_app/trail_form.html
+++ b/main_app/templates/main_app/trail_form.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-
 {% block content %}
 
 {% if object %}
@@ -14,8 +13,10 @@
         <table>
             {{ form.as_table }}
         </table>
-        <input type="submit" value="Submit!" class="btn">
+        <!-- <input type="submit" value="Submit!" class="btn"> -->
     </form>
+
 </h1>
+<input type="submit" value="Submit!" class="btn">
 
 {% endblock %}
