--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -86,8 +86,9 @@ form {
 
 
 form label {
-  font-weight: bold;
-  font-size: 16px;
+  font-weight: bolder;
+  font-size: 20px;
+  filter: brightness(.5);
 }
 
 form input[type="text"] {
@@ -104,9 +105,6 @@ form input[type="number"] {
   font-size: 16px;
   background-color: transparent;
 }
-
-
-
 
 .btn {
   font: bolder;
@@ -130,29 +128,52 @@ form input[type="number"] {
 .card-link {
   text-decoration: none;
   color: inherit;
-}
-
-.card {
+ }
+ 
+ 
+ .card {
   display: inline-block;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease;
-}
+  margin-left: 10px;
+ }
+ 
+ 
+ .card:hover {
+  transform: translateY(-5px);
+ }
+ 
+ 
+ .card-content  {
+  padding: 10px;
+  text-align: auto;
+  margin-bottom: 10px;
+  margin-left: 20px;
+ }
 
+ .detail {
+  padding: 10px;
+  text-align: left;
+  margin-bottom: 10px;
+ }
+
+ .card-image {
+  width: 100%;
+  height: 200px;
+  border-radius: 10px 10px 0 0;
+ }
+ 
+ 
+ .card-title {
+  margin-top: 10px;
+  font-size: 1.2rem;
+  font-weight: bold;
+ }
+ 
 .card:hover {
   transform: translateY(-5px);
-}
-
-.card-content {
-  padding: 10px;
-  text-align: center;
-}
-
-.card-image {
-  width: 100%;
-  height: auto;
-  border-radius: 10px 10px 0 0;
 }
 
 .card-title {
@@ -188,16 +209,19 @@ form input[type="number"] {
   opacity: 0.6;
   margin-bottom: auto;
   padding: 10px;
+  filter: brightness(1.75)
 }
 
 h1, h2, h3, h4 {
   color: #333;
   font-weight: bold;
+  filter: brightness(.5)
 }
 
 h1 {
   font-size: 32px;
   margin-bottom: 20px;
+  filter: brightness(.5)
 }
 
 h2 {
@@ -217,4 +241,5 @@ h4 {
 
 .teal-text {
   color: teal;
+  filter: brightness(0.5)
 }
