--- a/main_app/templates/trails/detail.html
+++ b/main_app/templates/trails/detail.html
@@ -6,9 +6,10 @@
     <div class="card">
         <div class="card-content">
             <span class="card-title">{{ trail.name }}</span>
-            <img src="{{ trail.image }}">
-            <p>Difficulty: {{ trail.difficulty }}</p>
-            <p>Description: {{ trail.description|linebreaks }}</p>
+            <img src="{{ trail.image }}" class="card-image">
+            <p class="detail">Difficulty: {{ trail.difficulty }}</p>
+            <p class="detail">Description: {{ trail.description }}</p>
+            <a class="detail" href="{{ trail.get_location_url }}">View Location</a>
         </div>
         <div class="card-action">
             <a href="{% url 'trails_update' trail.id %}">Edit</a>
